Fixing scrollbar on default template

--- a/html/assets/css/default.css
+++ b/html/assets/css/default.css
@@ -1,7 +1,10 @@
 
 /* Tags */
 html, body {
-	min-height: 100%;
+	height: 100%;
+}
+html {
+	overflow-y: hidden;
 }
 
 body {
